[FIX] Scrollbar style
스크롤바 예뻐짐

--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -1,4 +1,5 @@
 @import '~react-image-gallery/styles/scss/image-gallery.scss';
+@import 'utils';
 
 html,
 body {
@@ -8,6 +9,15 @@ body {
   font-family: 'NanumSquare', sans-serif;
   background-color: #f6f6f9;
   height: 100%;
+  &::-webkit-scrollbar {
+		width: 9px;
+	}
+	&::-webkit-scrollbar-thumb {
+	    background: $oc-green-6;
+	}
+	&::-webkit-scrollbar-track {
+    background-color: white;
+  }
 }
 
 * {
